[b]Version 0.6.0rc3[/b] (not released yet):

(2008-02-16)
 * New experimental code. New class "SMPlayer" which initializes the global
   objects and can parse the arguments. There's also a new main (main2.cpp).
   It's possible this could have broken something!


[b]Version 0.6.0rc2[/b]:

(2008-02-11)
 * Added gl:yuv=3 and gl2:yuv=3 to the list of video drivers.

(2008-02-09)
 * (Windows) Screensaver: set the timeout for lowpower, poweroff and 
   screensaver before playing, and restore on stop.
 
(2008-02-08)
 * (Windows) Bugfix: don't try to convert to 8.3 short names files that
   don't exist.
 
(2008-02-07)
 * The script create_deb should compile and create the package much faster.
 * Bugfix: if the mplayer binary configured in preferences is just "mplayer" 
   and there's a directory or file named mplayer in the smplayer working
   directory, smplayer would try to call that file. Now it won't call it
   if it's a regular file or directory, but WARNING if it's a binary it
   still will call it (this is because it tries to convert the path in an
   absolute path).
 * Some fixes so smplayer can work ok with a relative mplayer path.

(2008-02-06)
 * Now selection of chapters in mkv files should work properly again if
   using mplayer >= r25391.

(2008-02-05)
 * (Windows) Bugfix: the buttons to select the font color in 
   Preferences->Subtitles->SSA/ASS didn't show the color.
 * Removed Yurkovsky Andrey from the list of translators, as requested 
   by himself.

(2008-02-04)
 * The option Play->Repeat should work better now. Also if using mplayer
   >= r23747 toggling the option won't require to restart mplayer (uses
   the loop slave command instead).

(2008-02-03)
 * Try to remember if the window was maximized after exiting from fullscreen.
 * Added workaround for the problem of subtitles which don't disappear when
   using the "Add black borders" filter.


[b]Version 0.6.0rc1[/b]:

(2008-01-30)
 * Added the Korean translation, by Heesu Yoon <imsu30@gmail.com>
